Adding tests and migrating to Java 10